@@ -1,29 +1,28 @@
 package com.easysoftware.common.constant;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 
 public class MapConstant {
-    public static final Map<String, String> CATEGORY_MAP;
-    public static final Map<String, String> MAINTAINER;
-
-    static {
-        Map<String, String> categoryMap = new HashMap<>();
-        categoryMap.put("bigdata", "大数据");
-        categoryMap.put("ai", "AI");
-        categoryMap.put("Storage", "分布式存储");
-        categoryMap.put("sig-CloudNative", "云服务");
-        categoryMap.put("sig-HPC", "HPC");
-        categoryMap.put("Other", "其他");
-        CATEGORY_MAP = Collections.unmodifiableMap(categoryMap);
-    }
-
-    static {
-        Map<String, String> maintainerMap = new HashMap<>();
-        maintainerMap.put("id", "openEuler Community");
-        maintainerMap.put("email", "contact@openeuler.io");
-        maintainerMap.put("gitee_id", "openeuler-ci-bot");
-        MAINTAINER = Collections.unmodifiableMap(maintainerMap);
-    }
+    public static final String CATEGORY_BIGDATA = "bigdata";
+    public static final String CATEGORY_AI = "ai";
+    public static final String CATEGORY_STORAGE = "Storage";
+    public static final String CATEGORY_CLOUD_NATIVE = "sig-CloudNative";
+    public static final String CATEGORY_HPC = "sig-HPC";
+    public static final String CATEGORY_OTHER = "Other";
+    public static final String MAINTAINER_ID = "id";
+    public static final String MAINTAINER_EMAIL = "email";
+    public static final String MAINTAINER_GITEE_ID = "gitee_id";
+    public static final Map<String, String> CATEGORY_MAP = Map.of(
+            CATEGORY_BIGDATA, "大数据",
+            CATEGORY_AI, "AI",
+            CATEGORY_STORAGE, "分布式存储",
+            CATEGORY_CLOUD_NATIVE, "云服务",
+            CATEGORY_HPC, "HPC",
+            CATEGORY_OTHER, "其他"
+    );
+    public static final Map<String, String> MAINTAINER = Map.of(
+            MAINTAINER_ID, "openEuler Community",
+            MAINTAINER_EMAIL, "contact@openeuler.io",
+            MAINTAINER_GITEE_ID, "openeuler-ci-bot"
+    );
 }
